--- a/src/5.fuzzy.ipynb
+++ b/src/5.fuzzy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 81,
    "id": "57301dc5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "id": "46ca6451",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "id": "231f6b80",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "id": "d0d0907d",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 85,
    "id": "64c24e0e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 86,
    "id": "1c2213ff",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "id": "1b861a33",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 88,
    "id": "d37e6544",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 89,
    "id": "79aa64dd",
    "metadata": {},
    "outputs": [],
@@ -131,18 +131,18 @@
     "    ctrl.Rule(conf_model['alta'] & conf_efsr['alta'], quality['boa']),\n",
     "    ctrl.Rule(conf_model['alta'] & conf_efsr['media'], quality['media']),\n",
     "    ctrl.Rule(conf_model['alta'] & conf_efsr['baixa'], quality['ruim']),\n",
-    "    ctrl.Rule(conf_model['media'] & conf_efsr['alta'], quality['media']),\n",
+    "    ctrl.Rule(conf_model['media'] & conf_efsr['alta'], quality['boa']),\n",
     "    ctrl.Rule(conf_model['media'] & conf_efsr['media'], quality['media']),\n",
     "    ctrl.Rule(conf_model['media'] & conf_efsr['baixa'], quality['ruim']),\n",
-    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['alta'], quality['media']),\n",
-    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['media'], quality['ruim']),\n",
+    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['alta'], quality['boa']),\n",
+    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['media'], quality['media']),\n",
     "    ctrl.Rule(conf_model['baixa'] & conf_efsr['baixa'], quality['ruim'])\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "id": "99494e53",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 91,
    "id": "f80bd9c6",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 92,
    "id": "4082a292",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "id": "2c599ae9",
    "metadata": {},
    "outputs": [],
@@ -192,8 +192,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2795b34c",
+   "metadata": {},
+   "source": [
+    "### Inference"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 94,
    "id": "5856f7c6",
    "metadata": {},
    "outputs": [],
@@ -203,16 +211,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1e885bfe",
-   "metadata": {},
-   "source": [
-    "### Apply"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 95,
    "id": "9d3291bd",
    "metadata": {},
    "outputs": [
@@ -224,54 +224,54 @@
       "--------------------------------------------------------------\n",
       "-60    1.3   5      0.45   0.92   1        Bom      0.69      \n",
       "-67    1.7   3      0.26   0.91   1        Bom      0.68      \n",
-      "-74    4.1   19     0.52   0.43   0        Ruim     0.71      \n",
+      "-74    4.1   19     0.52   0.43   0        Ruim     0.54      \n",
       "-64    1.3   15     0.50   0.88   1        Bom      0.65      \n",
-      "-60    3.4   70     0.78   0.50   0        Ruim     0.81      \n",
-      "-70    6.7   146    0.85   0.38   0        Ruim     0.81      \n",
-      "-63    4.9   35     0.83   0.41   0        Ruim     0.79      \n",
+      "-60    3.4   70     0.78   0.50   0        Ruim     0.51      \n",
+      "-70    6.7   146    0.85   0.38   0        Ruim     0.57      \n",
+      "-63    4.9   35     0.83   0.41   0        Ruim     0.55      \n",
       "-59    2.6   7      0.42   0.44   0        Ruim     0.53      \n",
-      "-76    5.6   56     0.69   0.33   0        Ruim     0.82      \n",
+      "-76    5.6   56     0.69   0.33   0        Ruim     0.61      \n",
       "-61    1.5   13     0.22   0.95   1        Bom      0.75      \n",
-      "-52    9.7   31     0.75   0.88   0        Ruim     0.52      \n",
-      "-83    7.9   119    0.29   0.33   0        Ruim     0.82      \n",
-      "-93    12.5  47     0.71   0.39   0        Ruim     0.81      \n",
-      "-65    2.8   26     0.70   0.93   0        Ruim     0.50      \n",
+      "-52    9.7   31     0.75   0.88   1        Bom      0.64      \n",
+      "-83    7.9   119    0.29   0.33   0        Ruim     0.61      \n",
+      "-93    12.5  47     0.71   0.39   0        Ruim     0.56      \n",
+      "-65    2.8   26     0.70   0.93   1        Bom      0.71      \n",
       "-40    1.6   21     0.31   0.42   0        Ruim     0.55      \n",
       "-60    1.6   6      0.26   0.84   1        Bom      0.60      \n",
-      "-51    5.3   77     0.89   0.37   0        Ruim     0.81      \n",
+      "-51    5.3   77     0.89   0.37   0        Ruim     0.58      \n",
       "-57    1.6   8      0.52   0.41   0        Ruim     0.55      \n",
       "-51    1.2   7      0.18   0.33   0        Ruim     0.61      \n",
-      "-70    8.4   22     0.42   0.42   0        Ruim     0.79      \n",
+      "-70    8.4   22     0.42   0.42   0        Ruim     0.54      \n",
       "-64    1.2   13     0.55   0.34   0        Ruim     0.60      \n",
-      "-53    5.9   10     0.52   0.89   1        Bom      0.51      \n",
+      "-53    5.9   10     0.52   0.89   1        Bom      0.66      \n",
       "-56    1.3   9      0.59   0.33   0        Ruim     0.61      \n",
       "-59    3.0   26     0.05   0.36   0        Ruim     0.58      \n",
       "-51    1.8   5      0.14   0.40   0        Ruim     0.56      \n",
-      "-64    2.5   150    0.82   0.43   0        Ruim     0.81      \n",
+      "-64    2.5   150    0.82   0.43   0        Ruim     0.54      \n",
       "-54    1.6   10     0.13   0.85   1        Bom      0.62      \n",
       "-38    2.7   12     0.42   0.91   1        Bom      0.68      \n",
       "-50    1.0   4      0.44   0.91   1        Bom      0.68      \n",
-      "-95    14.3  21     0.94   0.96   0        Ruim     0.50      \n",
-      "-80    15.0  33     0.65   0.94   0        Ruim     0.50      \n",
+      "-95    14.3  21     0.94   0.96   1        Bom      0.77      \n",
+      "-80    15.0  33     0.65   0.94   1        Bom      0.74      \n",
       "-56    2.5   18     0.35   0.91   1        Bom      0.69      \n",
       "-57    1.4   3      0.15   0.32   0        Ruim     0.62      \n",
       "-56    1.2   10     0.44   0.36   0        Ruim     0.59      \n",
-      "-70    4.3   84     0.78   0.33   0        Ruim     0.82      \n",
+      "-70    4.3   84     0.78   0.33   0        Ruim     0.61      \n",
       "-66    4.0   18     0.54   0.38   0        Ruim     0.57      \n",
       "-41    1.6   10     0.17   0.92   1        Bom      0.69      \n",
       "-61    1.9   12     0.49   0.90   1        Bom      0.67      \n",
       "-51    1.8   8      0.12   0.39   0        Ruim     0.56      \n",
-      "-72    3.3   20     0.73   0.90   0        Ruim     0.51      \n",
+      "-72    3.3   20     0.73   0.90   1        Bom      0.66      \n",
       "-64    1.9   7      0.20   0.90   1        Bom      0.66      \n",
       "-61    1.0   5      0.08   0.42   0        Ruim     0.54      \n",
-      "-95    6.0   150    0.79   0.88   0        Ruim     0.52      \n",
-      "-80    4.8   150    0.76   0.31   0        Ruim     0.82      \n",
-      "-57    6.0   28     0.82   0.90   0        Ruim     0.51      \n",
-      "-65    3.2   129    0.79   0.90   0        Ruim     0.51      \n",
-      "-66    9.2   17     0.77   0.91   0        Ruim     0.51      \n",
-      "-83    4.2   28     0.89   0.91   0        Ruim     0.51      \n",
-      "-71    4.7   16     0.61   0.88   0        Ruim     0.52      \n",
-      "-79    5.8   35     0.70   0.91   0        Ruim     0.51      \n"
+      "-95    6.0   150    0.79   0.88   1        Bom      0.64      \n",
+      "-80    4.8   150    0.76   0.31   0        Ruim     0.63      \n",
+      "-57    6.0   28     0.82   0.90   1        Bom      0.67      \n",
+      "-65    3.2   129    0.79   0.90   1        Bom      0.67      \n",
+      "-66    9.2   17     0.77   0.91   1        Bom      0.68      \n",
+      "-83    4.2   28     0.89   0.91   1        Bom      0.68      \n",
+      "-71    4.7   16     0.61   0.88   1        Bom      0.64      \n",
+      "-79    5.8   35     0.70   0.91   1        Bom      0.68      \n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
    "id": "f9257d18",
    "metadata": {},
    "outputs": [
